Fix section spacing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -256,9 +256,6 @@ main img {
 }
 
 /* sections */
-main > .section {
-    margin: 40px 0;
-}
 
 main > .section > div {
     max-width: 1200px;
